<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        />

    <RelativeLayout
        android:id="@+id/stutebar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        />

    <RelativeLayout
        android:id="@+id/haead"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_below="@+id/stutebar"
        android:background="#ffffff">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/txt_nomal"
            android:textSize="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/password_change_title"
            />
        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/back2" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_below="@+id/haead"
        android:layout_above="@+id/buttomaciton"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/old_number"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_login_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/old_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="#00000000"
                android:gravity="left|center_vertical"
                android:maxLines="1"
                android:textSize="@dimen/nomal_edit_size"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:textColor="@color/logincolor"
                android:textColorHint="@color/loginhitcolor"
                android:hint="@string/password_old_code_hit"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_login_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/phone_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="#00000000"
                android:gravity="left|center_vertical"
                android:maxLines="1"
                android:textSize="@dimen/nomal_edit_size"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:textColor="@color/logincolor"
                android:textColorHint="@color/loginhitcolor"
                android:hint="@string/password_new_code_hit"
                />

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textSize="12dp"
                android:textColor="#ff0000"
                android:text="@string/password_error"
                android:visibility="invisible"
                />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/password_number"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_login_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="#00000000"
                android:gravity="left|center_vertical"
                android:maxLines="1"
                android:textSize="@dimen/nomal_edit_size"
                android:layout_centerVertical="true"
                android:inputType="textPassword"
                android:textColor="@color/logincolor"
                android:textColorHint="@color/loginhitcolor"
                android:hint="@string/password_new_code_confrim"
                />
            <TextView
                android:id="@+id/error2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textSize="12dp"
                android:textColor="#ff0000"
                android:text="@string/password_error2"
                android:visibility="invisible"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/forget"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="9dp"
            android:textColor="#A9A9A9"
            android:textSize="12dp"
            android:gravity="left|center_vertical"
            android:visibility="gone"
            android:text="@string/passwordi_imf"
            />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/shape_login_bg_btn"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/password_submit"
            />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/buttomaciton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        />
</RelativeLayout>
