<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/stutebar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:background="#ffffff" />

    <RelativeLayout
        android:id="@+id/headlayer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_below="@+id/stutebar"
        android:background="#ffffff">

        <RelativeLayout
            android:id="@+id/titlelayer"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_alignParentTop="true"
            android:background="#00000000">

            <ImageView
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/back2" />

            <TextView
                android:id="@+id/titletext"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/setting_about"
                android:textColor="@color/txt_nomal"
                android:textSize="20dp" />

        </RelativeLayout>
    </RelativeLayout>

    <intersky.mywidget.CircleImageView
        android:id="@+id/logo"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_below="@+id/headlayer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:src="@drawable/icon" />


    <TextView
        android:id="@+id/version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textColor="#dddddd"
        android:textSize="@dimen/about_below_size" />


    <TextView
        android:id="@+id/a1"
        style="@style/about_item_style"
        android:layout_below="@+id/version_name"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="21dp"
        android:text="@string/webAddress"
        android:textSize="@dimen/about_detial_size" />


    <TextView
        android:id="@+id/a2"
        style="@style/about_item_style"
        android:layout_below="@+id/a1"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="15dp"
        android:text="@string/contectUs"
        android:textSize="@dimen/about_detial_size" />


    <TextView
        android:id="@+id/a3"
        style="@style/about_item_style"
        android:layout_below="@+id/a2"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="15dp"
        android:text="@string/sinaWeibo"
        android:textSize="@dimen/about_detial_size" />


    <TextView
        android:id="@+id/a4"
        style="@style/about_item_style"
        android:layout_below="@+id/a3"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="15dp"
        android:text="@string/tele"
        android:textSize="@dimen/about_detial_size" />


    <RelativeLayout
        android:id="@+id/buttom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttomaciton"
        android:layout_marginBottom="30dp"
        android:visibility="visible"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/a5"
            style="@style/about_item_style"
            android:text="点击查看:"
            android:textSize="@dimen/about_below_size" />

        <TextView
            android:id="@+id/a6"
            style="@style/about_item_style"
            android:layout_toRightOf="@+id/a5"
            android:text="《用户协议和隐私声明》"
            android:textColor="#0082ff"
            android:textSize="@dimen/about_below_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttomaciton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="#000000" />

</RelativeLayout>